# AgentMarket

./: .gitignore  AgentMarket MVP - Software Requirem 18.06.txt  Readme.md  pyproject.toml
agent market/: main.py
agent market/core/: config.py
agent_market/: main.py
agent_market.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agent_market/api/: deps.py
agent_market/api/routes/: providers.py  services.py
agent_market/clients/llm/: deepseek_embedding_client.py  embedding_client_interface.py  openai_embedding_client.py
agent_market/core/: config.py  embeddings.py
agent_market/models/: mongo.py
agent_market/schemas/: provider.py  service.py
agent_market/services/: embedding_service.py  provider_logic.py  service_logic.py
tests/: test_main.py  test_providers.py  test_services.py  test_services_mock.py
