[project]
name = "agent-market"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "motor",
    "pydantic",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "httpx",
    "pydantic-settings>=2.9.1",
]
